Finished chapter08. Example of recompiling hfcal library for uk, and english versions allows us to run the main program without recompiling it, but getting different results because of the recompiled dynamic linked library. (The library only links in at runtime of the main program, so we can change the library all we want and only recompile the library).

--- a/headFirstC/libs/makefile
+++ b/headFirstC/libs/makefile
@@ -1,5 +1,5 @@
-hfcal.o: hfcal.c
-	gcc -Wall -g -I../includes -fPIC -c hfcal.c -o hfcal.o
+hfcal.o: hfcal_uk.c
+	gcc -Wall -g -I../includes -fPIC -c hfcal_uk.c -o hfcal.o
 
 libhfcal.a: hfcal.o
 	ar -rcs ./libhfcal.a hfcal.o
